# 0xP

./: .clang-format  .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  capture.bat  capture.sh  download_artifacts.bat  download_artifacts.sh  launch_tracy.bat  launch_tracy.sh  run_editor.bat  run_editor.sh  run_engine.bat  run_engine.sh  todo.md
assets/meshes/: TestScene.gltf  stalingrad.glb
assets/scenes/: testA.glb
benchmarks/: XPBenchmarks.cpp
cmake/: annotations.cmake  cross_platforms.cmake  emscripten.cmake  macOS.cmake  windows.cmake
src/Compute/: .gitignore  CMakeLists.txt  compile_shaders.bat  compile_shaders.sh  setup.bat  setup.sh
src/Compute/include/Compute/: XPCompute.h  XPComputeElfLoader.h  XPImageWorks.h
src/Compute/riscv/: CMakeLists.txt  build.sh
src/Compute/riscv/cmake/: riscv32i.toolchain.cmake
src/Compute/riscv/common/: crt0.S  linker.ld  syscalls.c  syscalls.h  uart.c  uart.h
src/Compute/riscv/src/: Logger.h  Maths.h  Rasterizer.h  SceneDescription.cpp  SceneDescription.h  Texture.h  main.cpp
src/Compute/shaders/: bus.slang  compute.slang  decoder.slang  hostMappedMemory.slang  instruction.slang  memory.slang  processor.slang  syscalls.slang
src/Compute/shaders/shared/: config.h  enums.h  structures.h
src/Compute/src/: XPCompute.cpp  XPComputeElfLoader.c
src/Controllers/: XPInput.cpp  XPInput.h
src/DataPipeline/: XPAssimpModelLoader.cpp  XPAssimpModelLoader.h  XPDataPipelineStore.cpp  XPDataPipelineStore.h  XPEnums.h  XPFile.cpp  XPFile.h  XPFileWatchEmscripten.cpp  XPFileWatchEmscripten.h  XPFileWatchUnix.cpp  XPFileWatchUnix.h  XPFileWatchWindows.cpp  XPFileWatchWindows.h  XPIFileWatch.h  XPLightBuffer.cpp  XPLightBuffer.h  XPLogic.h  XPMaterialAsset.h  XPMaterialBuffer.cpp  XPMaterialBuffer.h  XPMeshAsset.h  XPMeshBuffer.cpp  XPMeshBuffer.h  XPPreloadedAssets.cpp  XPPreloadedAssets.h  XPRiscvBinaryAsset.h  XPRiscvBinaryBuffer.h  XPSceneAsset.cpp  XPSceneAsset.h  XPShaderAsset.h  XPShaderBuffer.cpp  XPShaderBuffer.h  XPShaderLoader.cpp  XPShaderLoader.h  XPStbTextureLoader.cpp  XPStbTextureLoader.h  XPTextureAsset.h  XPTextureBuffer.cpp  XPTextureBuffer.h
src/Editor/: main.cpp
src/Emulator/: CMakeLists.txt  build.sh  dependencies.sh  run.sh  setup.sh
src/Emulator/include/Emulator/: XPEmulatorBus.h  XPEmulatorCommon.h  XPEmulatorConfig.h  XPEmulatorDecoder.h  XPEmulatorElfLoader.h  XPEmulatorEnums.h  XPEmulatorHostMappedMemory.h  XPEmulatorInstruction.h  XPEmulatorLogger.h  XPEmulatorMemory.h  XPEmulatorProcessor.h  XPEmulatorSyscalls.h  XPEmulatorUART.h
src/Emulator/launcher/src/: launcher.c
src/Emulator/r5r/: R5RBVH.h  R5RImporter.h  R5RLogger.h  R5RMaths.h  R5RMemoryPool.h  R5RMeshGenerator.h  R5RRasterizer.h  R5RRaytracer.h  R5RRenderer.cpp  R5RRenderer.h  R5RRendererCommon.h  R5RSceneDescriptor.h  R5RTests.h  R5RTexture.h  R5RThirdParty.cpp  R5RThirdParty.h  R5RThreadPool.cpp  R5RThreadPool.h  R5RWorld.h  main.cpp  wasm_interface.cpp  wasm_interface.h  wasm_renderer.h  wasm_window.h
src/Emulator/src/: XPEmulatorBus.c  XPEmulatorCommon.c  XPEmulatorDecoder.c  XPEmulatorElfLoader.c  XPEmulatorHostMappedMemory.c  XPEmulatorMemory.c  XPEmulatorProcessor.c  XPEmulatorUART.c
src/Emulator/test/: CMakeLists.txt
src/Emulator/test/all_instr/: main.c
src/Emulator/test/cmake/: riscv32i.toolchain.cmake
src/Emulator/test/common/: crt0.S  linker.ld  startup.c  syscalls.c  uart.c  uart.h
src/Emulator/test/programs/: capp32  capp32.list  cppapp32  cppapp32.list  rasterizer32  rasterizer32.list
src/Emulator/test/rasterizer/: Maths.h  Rasterizer.h  Renderer.cpp  Renderer.h  SceneDescription.cpp  SceneDescription.h  Texture.h  main.cpp
src/Emulator/test/src/: app.c  app.cpp
src/Engine/: XPAllocators.cpp  XPAllocators.h  XPConsole.cpp  XPConsole.h  XPEngine.cpp  XPEngine.h  XPRegistry.cpp  XPRegistry.h  XPViewport.cpp  XPViewport.h
src/Game/: XPGame.cpp  XPGame.h
src/Lang/Interface/: XPEnums.h  XPIBlock.h  XPIContext.h  XPIGraph.h  XPILang.h  XPILink.h  XPIPin.h  XPIPinType.h  XPITextEditor.h
src/Mcp/: XPMcpServer.cpp  XPMcpServer.h
src/Painting/: XPPainting.cpp
src/Physics/Bullet/: XPBulletPhysics.cpp  XPBulletPhysics.h
src/Physics/Empty/: XPEmptyPhysics.cpp  XPEmptyPhysics.h
src/Physics/Interface/: XPIPhysics.h
src/Physics/Jolt/: XPJoltPhysics.cpp  XPJoltPhysics.h
src/Physics/PhysX4/: XPPhysX4Physics.cpp  XPPhysX4Physics.h
src/Physics/PhysX5/: XPPhysX5Physics.cpp  XPPhysX5Physics.h
src/Profiler/src/: XPProfiler.cpp
src/Renderer/DX12/: XPDX12.h  XPDX12GPUData.cpp  XPDX12GPUData.h  XPDX12Renderer.cpp  XPDX12Renderer.h  XPDX12Upscaler.cpp  XPDX12Upscaler.h  XPDX12Window.cpp  XPDX12Window.h  XPShaderTypes.h
src/Renderer/Interface/: XPIRenderer.h  XPIRendererBuffer.h  XPIRendererCommandBuffer.h  XPIRendererShaderSurface.h  XPRendererGraph.cpp  XPRendererGraph.h
src/Renderer/Metal/: XPMetal.h  XPMetalBuffer.cpp  XPMetalBuffer.h  XPMetalBufferManaged.cpp  XPMetalBufferManaged.h  XPMetalBufferMemoryless.cpp  XPMetalBufferMemoryless.h  XPMetalBufferPrivate.cpp  XPMetalBufferPrivate.h  XPMetalBufferShared.cpp  XPMetalBufferShared.h  (+19 more)
src/SceneDescriptor/: XPEnums.h  XPFilter.cpp  XPFilter.h  XPLayer.cpp  XPLayer.h  XPScene.cpp  XPScene.h  XPSceneDescriptorStore.cpp  XPSceneDescriptorStore.h  XPTypes.h
src/ShaderParser/: .gitignore
src/ShaderParser/SPB/: Cargo.toml
src/ShaderParser/SPB/src/: main.rs
src/Shortcuts/: XPShortcuts.cpp  XPShortcuts.h
src/Templates/: XPAnnotations.cpp.in  XPAnnotations.h.in  XPAttachments.h.in  XPNode.cpp.in  XPNode.h.in  XPSceneStore.cpp.in  XPSceneStore.h.in
src/Utilities/: XPBitArray.h  XPBitFlag.h  XPCrossShaderCompiler.cpp  XPCrossShaderCompiler.h  XPDiscarder.cpp  XPDiscarder.h  XPFS.cpp  XPFS.h  XPFreeCameraSystem.cpp  XPFreeCameraSystem.h  XPLocker.cpp  XPLocker.h  XPLogger.h  XPMacros.h  XPMaths.h  XPMemory.cpp  XPMemory.h  XPMemoryPool.h  XPPlatforms.h  XPProfiler.cpp  XPProfiler.h  XPRecorder.cpp  XPRecorder.h
tests/: XPTestAttachments.cpp  XPTestBitArrays.cpp  XPTestSceneDescription.cpp
(+205 files in other folders)
