[package]
name = "SPB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga = { version = "0.11.0", features = ["glsl-in", "spv-in", "spv-out", "wgsl-in", "wgsl-out", "msl-out"] }
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }